--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest3.bib
@@ -1,10 +1,10 @@
-@book{noauthororeditor2008digital,
-abstract = {Furnishes an overview of the latest in digital technology, including cameras and equipment, as well as the essential techniques and skills of the photographic process--exposure, lighting, shutter speed, depth of field, and resolution--and tips on how to avoid hours of photo-editing by taking great photographs the first time.},
-address = {Berkeley, CA},
-isbn = {9780321605825 0321605829 9780321474049 032147404X},
+@book{noauthororeditor2011scott,
+abstract = {A collection of photographic tricks of the trade to help the photographer achieve dramatically better-looking, sharper, more colorful professional looking photos.},
+address = {[Berkeley, Calif.]},
+isbn = {9780321678737 0321678737 9780321474049 032147404X 9780321524768 0321524764 9780321617651 0321617657},
 publisher = {Peachpit Press},
-refid = {298607714},
-title = {The digital photography book. the step-by-step secrets for how to make your photos look like the pros'! [Vol. 1] [Vol. 1]},
+refid = {739030776},
+title = {Scott Kelby's digital photography boxed set : the step-by-step secrets for how to make your photos look like the pros'!},
 url = {http://www.amazon.ca/Digital-Photography-Book-Scott-Kelby/dp/032147404X/ref=sr_1_3?ie=UTF8&s=books&qid=1201615938&sr=1-3},
-year = {2008}
+year = {2011}
 }
