--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest9.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest9.bib
@@ -5,6 +5,6 @@ isbn = {9783426274910 3426274914},
 publisher = {Droemer},
 refid = {471933497},
 title = {Open : das Selbstporträt},
-url = {http://www.amazon.de/gp/product/3426274914/ref=s9_top_bw_i3/278-8327421-8514538?pf_rd_m=A3JWKAKR8XB7XF&amp;pf_rd_s=center-4&amp;pf_rd_r=0QDEYW5TCNM11354JY22&amp;pf_rd_t=101&amp;pf_rd_p=473590033&amp;pf_rd_i=299956},
+url = {http://www.amazon.de/gp/product/3426274914/ref=s9_top_bw_i3/278-8327421-8514538?pf_rd_m=A3JWKAKR8XB7XF&pf_rd_s=center-4&pf_rd_r=0QDEYW5TCNM11354JY22&pf_rd_t=101&pf_rd_p=473590033&pf_rd_i=299956},
 year = {2009}
 }
